--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <ul>
       <li>I can submit a form object that includes a file upload.</li>
       <li>The from file input field  has the "name" attribute set to "upfile". We rely on this in testing.</li>
-      <li>When I submit something, I will receive the file name, and size in bytes within the JSON response.</li>
+      <li>When I submit something, I will receive the file name, type, and size in bytes within the JSON response.</li>
     </ul>
     <h3>Usage:</h3>
     <p>
